--- a/SqApp/wwwroot/css/style.css
+++ b/SqApp/wwwroot/css/style.css
@@ -34,11 +34,22 @@
 .sect1{/*---------------SECT1-------------*/
 	width: 100%;
 }
-.sect1-mob{
-	display: none;
-	width: 100%;
-	height: 200px;
-	background-color: #118CE9;
+.sect1-mob {
+    display: none;
+    width: 100%;
+    /*background-color: #118CE9;*/
+    position: relative;
+    top: -15px;
+}
+.autoplay {
+    width: 100vw;
+    height: 100%;
+    left: -6vw;
+}
+.autoplay img{
+    width: 80vw;
+    height: 120px;
+    margin: 0 10px;
 }
 .sect1-top{
 	width: 100%;
@@ -260,33 +271,23 @@
 	justify-content: space-between;
 }
 .sect1-bottom > a{
-	width: 15.5%;
-	/*padding: 0 25px;*/
-	padding: 20px 15px;
+	width: 12.5%;
+	padding: 20px 5px;
 	margin: 10px 0;
 	background-color: #fff;
 	box-shadow: 0 1px 5px #90A8D1;
 	text-decoration: none;
-	/*display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	-webkit-flex-direction: column;
-	-moz-flex-direction: column;
-	-ms-flex-direction: column;
-	-o-flex-direction: column;
-	flex-direction: column;
-	justify-content: space-around;
-	-ms-align-items: center;
-	align-items: center;*/
     text-align: center;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s;
+	transition: 0.5s;
 }
 .sect1-bottom > a > img{
-	height: 50px;
+	height: 40px;
 }
 .sect1-bottom > a > h3{
-	font-size: 24px;
+    height: 40px;
+	font-size: 18px;
 	font-weight: normal;
 	color: #555;
 	margin: 0;
@@ -298,8 +299,9 @@
 	transition: 0.5s;
 }
 .sect1-bottom p{
+	font-size: 14px;
 	text-align: center;
-	margin-top: 15px;
+	margin-top: 10px;
 }
 .sect1-bottom > a:hover{
 	-webkit-transition: 0.5s;
@@ -520,16 +522,18 @@
 		height: 300px;
 	}
 	.sect1-bottom > a{
-		padding: 20px 5px;
+		padding: 15px 5px;
 	}
-    .sect1-bottom > a > h3{
-        font-size: 20px;
-    }
     .sect2-bottom > a > img {
-        height: 60px;
+        height: 35px;
+    }
+    .sect1-bottom > a > h3{
+        font-size: 16px;
+	    margin-top: 10px;
     }
 	.sect1-bottom p{
-		font-size: 14px;
+		font-size: 12px;
+	    margin-top: 5px;
 	}
 	.buy{
 		width: 50%;
@@ -562,9 +566,21 @@
 		/*justify-content: space-around;*/
 	}
 	.sect1-bottom > a{
-		width: 32%;
-		padding: 30px 25px;
+		width: 25%;
+        padding: 20px 10px;
 		margin: 10px 0;
+        border: 1px solid #C7CBD1;
+        box-shadow: none;
+	}
+    .sect1-bottom > a:nth-child(-n+3), .sect1-bottom > a:nth-child(n+5):nth-child(-n+7){
+		border-right: none;
+	}
+    .sect1-bottom > a:nth-child(-n+4){
+		margin-bottom: 0;
+		border-bottom: none;
+	}
+    .sect1-bottom > a:nth-child(n+5):nth-child(n+4){
+		margin: 0;
 	}
 	.sect1-top{
 		width: 100%;
@@ -600,7 +616,7 @@
 		padding: 20px 15px;
 	}
 	.sect2-bottom > a > h3 {
-	    font-size: 18px;
+	    font-size: 16px;
 	    color: #555;
 	    margin: 15px 0;
 	}
@@ -634,22 +650,23 @@
 	.sect1-top{
 		display: none;
 	}
-	.sect1-bottom{
-		padding-top: 10px;
-	}
+    .sect1-bottom {
+        padding-top: 0;
+        width: 101vw;
+        position: relative;
+        left: -6.5vw;
+    }
 	.sect1-bottom > a{
-	    width: 32%;
-	    padding: 20px 0;
+	    width: 25%;
+	    padding: 15px 5px;
 	    margin: 0;
 	}
-	.sect1-bottom > a:nth-child(n+1):nth-child(-n+3){
-		margin-bottom: 10px;
-	}
-	.sect1-bottom > a > img, .sect2-bottom > a > img{
-		height: 50px;
-	}
+    .sect1-bottom > a > img{
+        height: 30px;
+    }
 	.sect1-bottom > a > h3 {
-	    font-size: 16px;
+	    font-size: 12px;
+        height: auto !important;
 	    margin: 0;
 	    margin-top: 10px;
 	}
@@ -678,6 +695,10 @@
 	.sect2-bottom > a{
 		width: 48%;
 		margin: 0;
+	}
+    
+	.sect2-bottom > a > img{
+		height: 50px;
 	}
 	.sect2-bottom > a:nth-child(-n+2){
 		margin-bottom: 15px;
@@ -737,13 +758,23 @@
     .sect2-top {
         height: 110px;
     }
+    .autoplay img {
+        height: 100px;
+        margin: 0 10px;
+    }
 }
 @media  (max-width: 320px){
-	.sect1-bottom > a{
-		padding: 10px 0;
-	}
+
+    .autoplay img {
+        height: 90px;
+        margin: 0 8px;
+    }
+    .sect1-bottom > a {
+        padding: 10px 5px;
+    }
 	.sect1-bottom > a > h3{
-		font-size: 14px;
+		margin-top: 5px;
+        font-size: 11px;
 	}
     .sect2-h > p{
 		font-size: 16px;
@@ -754,12 +785,16 @@
 	.sect2-h > h3, .sect3-h{
 		font-size: 24px;
 	}
-	.sect2-bottom > a > p{
-		display: none;
+    .sect2-bottom > a{
+		padding: 20px 10px;
 	}
 	.sect2-bottom > a > h3{
 		margin-bottom: 0;
+        font-size: 14px;
 	}
+    .sect2-bottom > a > p {
+        display: none;
+    }
 	.sect3-cont > a{
 		padding: 5px;
 	}
