--- a/SqApp/Views/Home/Index.cshtml
+++ b/SqApp/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                 <p>Оптовые товары из Китая</p>
             </a>
             <a href="#!">
-                <img src="~/images/dostavka.png" />
+                <img src="~/images/kurer.png" />
                 <h3>Курьерская служба</h3>
                 <p>Оптовые товары из Китая</p>
             </a>
@@ -52,7 +52,7 @@
                 <p>Доставка товаров из Китая</p>
             </a>
             <a href="~/Home/Logistika">
-                <img src="~/images/uslugi.png" />
+                <img src="~/images/perevod.png" />
                 <h3>Переводы</h3>
                 <p>Доставка товаров из Китая</p>
             </a>
