--- a/SqApp/Views/Home/Index.cshtml
+++ b/SqApp/Views/Home/Index.cshtml
@@ -38,6 +38,11 @@
             </a>
             <a href="#!">
                 <img src="~/images/dostavka.png" />
+                <h3>Доставка</h3>
+                <p>Оптовые товары из Китая</p>
+            </a>
+            <a href="#!">
+                <img src="~/images/dostavka.png" />
                 <h3>Логистика</h3>
                 <p>Оптовые товары из Китая</p>
             </a>
@@ -45,6 +50,11 @@
                 <img src="~/images/kurer.png" />
                 <h3>Курьерская служба</h3>
                 <p>Оптовые товары из Китая</p>
+            </a>
+            <a href="~/Home/Logistika">
+                <img src="~/images/uslugi.png" />
+                <h3>Пакеты с логотипом</h3>
+                <p>Доставка товаров из Китая</p>
             </a>
             <a href="~/Home/Logistika">
                 <img src="~/images/uslugi.png" />
