--- a/SqApp/wwwroot/css/style.css
+++ b/SqApp/wwwroot/css/style.css
@@ -271,7 +271,7 @@
 	justify-content: space-between;
 }
 .sect1-bottom > a{
-	width: 12.5%;
+	width: 15.5%;
 	padding: 20px 5px;
 	margin: 10px 0;
 	background-color: #fff;
@@ -282,6 +282,9 @@
 	-o-transition: 0.5s;
 	transition: 0.5s;
 }
+    .sect1-bottom > a:nth-child(3), .sect1-bottom > a:nth-child(4), .sect1-bottom > a:nth-child(6), .sect1-bottom > a:nth-child(7) {
+        display: none;
+    }
 .sect1-bottom > a > img{
 	height: 40px;
 }
@@ -572,16 +575,23 @@
         border: 1px solid #C7CBD1;
         box-shadow: none;
 	}
-    .sect1-bottom > a:nth-child(-n+3), .sect1-bottom > a:nth-child(n+5):nth-child(-n+7){
+    
+    .sect1-bottom > a:nth-child(2), .sect1-bottom > a:nth-child(5){
+	    display: none;
+	}
+        .sect1-bottom > a:nth-child(3), .sect1-bottom > a:nth-child(4), .sect1-bottom > a:nth-child(6), .sect1-bottom > a:nth-child(7) {
+            display: block;
+        }
+    .sect1-bottom > a:nth-child(n+1):nth-child(-n+4){
 		border-right: none;
 	}
-    .sect1-bottom > a:nth-child(-n+4){
-		margin-bottom: 0;
-		border-bottom: none;
+    .sect1-bottom > a:nth-last-child(n+2):nth-last-child(-n+4){
+		border-right: none;
 	}
-    .sect1-bottom > a:nth-child(n+5):nth-child(n+4){
-		margin: 0;
-	}
+    .sect1-bottom > a:nth-child(-n+6){
+        margin-bottom: -10px;
+        border-bottom: none;
+    }
 	.sect1-top{
 		width: 100%;
 		height: 400px;
@@ -693,22 +703,19 @@
 		justify-content: space-between;
 	}
 	.sect2-bottom > a{
-		width: 48%;
+		width: 23%;
 		margin: 0;
+        padding: 15px 5px;
 	}
     
 	.sect2-bottom > a > img{
-		height: 50px;
-	}
-	.sect2-bottom > a:nth-child(-n+2){
-		margin-bottom: 15px;
-	}
-	.sect2-bottom > a > i{
-		font-size: 30px;
+		height: 35px;
+		margin: 0;
 	}
 	.sect2-bottom > a > h3{
-		font-size: 16px;
-		margin: 10px 0;
+		font-size: 12px;
+		margin-top: 10px;
+		margin-bottom: 0;
 	}
 	.sect2, .sect3, .sect4{
 		margin-top: 50px;
@@ -783,12 +790,12 @@
 	.sect2-h > h3, .sect3-h{
 		font-size: 24px;
 	}
-    .sect2-bottom > a{
-		padding: 20px 10px;
+	.sect2-bottom > a > img{
+		height: 30px;
+		margin: 0;
 	}
 	.sect2-bottom > a > h3{
-		margin-bottom: 0;
-        font-size: 14px;
+		font-size: 11px;
 	}
     .sect2-bottom > a > p {
         display: none;
