--- a/SqApp/Views/Home/Index.cshtml
+++ b/SqApp/Views/Home/Index.cshtml
@@ -173,13 +173,13 @@
 			  centerMode: true,
 			  variableWidth: true
 			});
-         //$(function () {
-         //    $('.slider').rbtSlider({
-         //        'height': '100%',
-         //        'dots': false,
-         //        'arrows': false,
-         //        'auto': 3
-         //    })
-         //});
+         $(function () {
+             $('.slider').rbtSlider({
+                 'height': '100%',
+                 'dots': false,
+                 'arrows': false,
+                 'auto': 3
+             })
+         });
      });
 </script>
