--- a/SqApp/Views/Shared/_Layout.cshtml
+++ b/SqApp/Views/Shared/_Layout.cshtml
@@ -44,7 +44,8 @@
                 </div>
             </div>
             <ul>
-                <li><a href="~/Home/Index">Главная</a></li>
+                <li><a href="~/Home/Index">Сообщение</a></li>
+                <li><a href="~/Home/Index">Главное</a></li>
                 <li><a href="~/Store/Shop">Магазин</a></li>
                 <li>
                     <a href="#!" class="mob-down mob-dost">Доставка<i class="fa fa-angle-right"></i></a>
@@ -53,16 +54,17 @@
                         <li><a href="~/Home/Logistika">Логистика</a></li>
                     </ul>
                 </li>
+                <li><a href="#!">Переводы</a></li>
                 <li>
                     <a href="#!" class="mob-down mob-usl">Услуги<i class="fa fa-angle-right"></i></a>
                     <ul class="mob-down-menu mob-usl-menu">
                         <li><a href="#!">Пакеты с логотипом</a></li>
-                        <li><a href="#!">Переводы</a></li>
                     </ul>
                 </li>
+                <li><a href="#!">Visa</a></li>
+                <li><a href="#!">Туризм, отели</a></li>
                 <li><a href="#!">SQ Taxi</a></li>
                 <li><a href="#!">Гид</a></li>
-                <li><a href="#!">Сообщения</a></li>
                 <li><a href="#!">Контакты</a></li>
             </ul>
         </div>
