--- a/SqApp/Views/Home/Index.cshtml
+++ b/SqApp/Views/Home/Index.cshtml
@@ -36,14 +36,9 @@
                 <h3>Магазин</h3>
                 <p>Оптовые товары из Китая</p>
             </a>
-            <a href="#!">
+            <a href="~/Home/Logistika">
                 <img src="~/images/dostavka.png" />
                 <h3>Доставка</h3>
-                <p>Оптовые товары из Китая</p>
-            </a>
-            <a href="#!">
-                <img src="~/images/dostavka.png" />
-                <h3>Логистика</h3>
                 <p>Оптовые товары из Китая</p>
             </a>
             <a href="#!">
@@ -52,19 +47,29 @@
                 <p>Оптовые товары из Китая</p>
             </a>
             <a href="~/Home/Logistika">
+                <img src="~/images/dostavka.png" />
+                <h3>Логистика</h3>
+                <p>Оптовые товары из Китая</p>
+            </a>
+            <a href="~/Home/Uslugi">
                 <img src="~/images/uslugi.png" />
-                <h3>Пакеты с логотипом</h3>
+                <h3>Услуги</h3>
                 <p>Доставка товаров из Китая</p>
             </a>
-            <a href="~/Home/Logistika">
-                <img src="~/images/uslugi.png" />
-                <h3>Пакеты с логотипом</h3>
-                <p>Доставка товаров из Китая</p>
-            </a>
-            <a href="~/Home/Logistika">
+            <a href="#!">
                 <img src="~/images/perevod.png" />
                 <h3>Переводы</h3>
                 <p>Доставка товаров из Китая</p>
+            </a>
+            <a href="#!">
+                <img src="~/images/uslugi.png" />
+                <h3>Туризм, отели</h3>
+                <p>Доставка товаров из Китая</p>
+            </a>
+            <a href="#!">
+                <img src="~/images/message.png" />
+                <h3>Visa</h3>
+                <p>Перевод на Китаиский юань</p>
             </a>
             <a href="#!">
                 <img src="~/images/taxi.png" />
@@ -75,11 +80,6 @@
                 <img src="~/images/gid.png" />
                 <h3>SQ Гид</h3>
                 <p>Ответы на все вопросы</p>
-            </a>
-            <a href="#!">
-                <img src="~/images/message.png" />
-                <h3>Сообщения</h3>
-                <p>Перевод на Китаиский юань</p>
             </a>
         </div>
     </div>
