--- a/SqApp/wwwroot/css/style.css
+++ b/SqApp/wwwroot/css/style.css
@@ -671,6 +671,9 @@
 	    padding: 15px 5px;
 	    margin: 0;
 	}
+        .sect1-bottom > a:nth-child(-n+6) {
+            margin-bottom: -5px;
+        }
     .sect1-bottom > a > img{
         height: 30px;
     }
@@ -781,6 +784,9 @@
 		margin-top: 5px;
         font-size: 11px;
 	}
+    .sect1-bottom > a:nth-child(-n+6) {
+        margin-bottom: 0;
+    }
     .sect2-h > p{
 		font-size: 16px;
 	}
