--- a/SqApp/Views/Home/Index.cshtml
+++ b/SqApp/Views/Home/Index.cshtml
@@ -51,14 +51,14 @@
                 <h3>Логистика</h3>
                 <p>Оптовые товары из Китая</p>
             </a>
-            <a href="~/Home/Uslugi">
-                <img src="~/images/uslugi.png" />
-                <h3>Услуги</h3>
-                <p>Доставка товаров из Китая</p>
-            </a>
             <a href="#!">
                 <img src="~/images/perevod.png" />
                 <h3>Переводы</h3>
+                <p>Доставка товаров из Китая</p>
+            </a>
+            <a href="~/Home/Uslugi">
+                <img src="~/images/uslugi.png" />
+                <h3>Услуги</h3>
                 <p>Доставка товаров из Китая</p>
             </a>
             <a href="#!">
@@ -78,7 +78,7 @@
             </a>
             <a href="#!">
                 <img src="~/images/gid.png" />
-                <h3>SQ Гид</h3>
+                <h3>Контакты</h3>
                 <p>Ответы на все вопросы</p>
             </a>
         </div>
@@ -106,25 +106,25 @@
         <div class="sect2-bottom">
             <a href="#!">
                 <img src="~/images/avia.png" />
-                <h3>Оптовые товары из Китая</h3>
+                <h3>Авиа транспорт</h3>
             </a>
             <a href="#!">
                 <img src="~/images/transport.png" />
-                <h3>Оптовые товары из Китая</h3>
+                <h3>Авто транспорт</h3>
             </a>
             <a href="#!">
                 <img src="~/images/mors.png" />
-                <h3>Оптовые товары из Китая</h3>
+                <h3>Морской транспорт</h3>
             </a>
             <a href="#!">
                 <img src="~/images/ekonom.png" />
-                <h3>Оптовые товары из Китая</h3>
+                <h3>эконом транспорт</h3>
             </a>
         </div>
     </div>
     <div class="sect3">
         <h3 class="sect3-h">Магазин SQ Express</h3>
-        <p>Выбор лучшей цены, одобрение кредита онлайн.</p>
+        <p>Выбор лучшей цены.</p>
         <div class="sect3-cont">
             <a href="#!">
                 <img src="~/images/f1.png"/>
