--- a/SqApp/Views/Home/Logistika.cshtml
+++ b/SqApp/Views/Home/Logistika.cshtml
@@ -13,7 +13,7 @@
         <div class="sect2-cont">
             <a href="~/Logistika/Air">
                 <img src="~/images/avia.png" />
-                <h3>Авиа доставка из Китая от 30кг</h3>
+                <h3>Авиа доставка из Китая от 150кг</h3>
                 <p>Быстрые решения для вашего бизнеса</p>
             </a>
             <a href="~/Logistika/Avto">
@@ -84,11 +84,11 @@
             <div class="phones">
                 <div>
                     <p>Поддержка для клиентов сервиса:</p>
-                    <p class="number">8 (800) 775-77-28</p>
+                    <p class="number">7(778) 780 70 70</p>
                 </div>
                 <div>
                     <p>Отдел продаж:</p>
-                    <p class="number">+7 (495) 181-01-48</p>
+                    <p class="number">+7 (ххх) ххх хх хх</p>
                 </div>
             </div>
             <div class="form">
@@ -141,7 +141,7 @@
         var phone = document.getElementById("phone").value;
         var desc = document.getElementById("desc").value;
 
-        const urlFetch = 'http://sqdevelop-001-site1.itempurl.com' + '/Home/GetRequest'
+        const urlFetch = 'http://sqexpress.kz' + '/Home/GetRequest'
         fetch(urlFetch, {
             method: 'POST',
             headers: {
