--- a/SqApp/Views/Home/Uslugi.cshtml
+++ b/SqApp/Views/Home/Uslugi.cshtml
@@ -6,7 +6,7 @@
         <p>Все услуги сервиса делятся на 4 основных подразделения, кликните на интересующий вас раздел. Добро пожаловать в Китай!</p>
     </div>
     <div class="sect-cont">
-        <img src="http://www.transitplus.ru/img/service/head/express.png" alt="">
+        <img src="~/images/express.png" alt="">
         <div class="sect-text">
             <h2>Авиа доставка</h2>
             <p>Услуга «сборные грузы из Китая» подходит для участников малого и среднего бизнеса, — одним словом, для тех, кто не готов ждать пока соберется целый контейнер. В таких случаях, используя автотранспорт, можно добиться минимизации сроков и стоимости доставки, так как несколько клиентов берут на себя аренду контейнера или фуры.</p>
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="sect-cont">
-        <img src="http://www.transitplus.ru/img/service/head/sbornie.png" alt="">
+        <img src="~/images/sbornie.png" alt="">
         <div class="sect-text">
             <h2>Автодоставка</h2>
             <p>Услуга «сборные грузы из Китая» подходит для участников малого и среднего бизнеса, — одним словом, для тех, кто не готов ждать пока соберется целый контейнер. В таких случаях, используя автотранспорт, можно добиться минимизации сроков и стоимости доставки, так как несколько клиентов берут на себя аренду контейнера или фуры.</p>
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="sect-cont">
-        <img src="http://www.transitplus.ru/img/service/head/express.png" alt="">
+        <img src="~/images/containers.png" alt="">
         <div class="sect-text">
             <h2>Морская доставка</h2>
             <p>Доставка целых контейнеров из любого порта в Китае на условиях FOB и EXW. Мы предложим вам лучший маршрут исходя из вашего бюджета. Таможенное оформление и подготовку разрешительных документов мы берем на себя. Контейнерные перевозки из Китая в Россию — это надежно и выгодно для вас.</p>
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="sect-cont">
-        <img src="http://www.transitplus.ru/img/service/head/sbornie.png" alt="">
+        <img src="~/images/ekonom_dostavka.png" alt="">
         <div class="sect-text">
             <h2>Эконом-доставка из Китая</h2>
             <p>Доставка сборным контейнером идеально подходит для товаров, которые могут быть привезены с учетом длительного планирования, пробных закупок, тяжелых и недорогих, а также хрупких товаров, требующих бережной транспортировки. Данный способ доставки является лучшим вариантом отправки груза, не поместившегося в целый контейнер.</p>
