--- a/SqApp/Views/Logistika/Avto.cshtml
+++ b/SqApp/Views/Logistika/Avto.cshtml
@@ -4,7 +4,7 @@
 <content>
     <div class="accordeon">
         <div class="zayav">
-            <p>+7(777)777-77-77</p>
+            <p>+7(778) 780 70 70</p>
             <button type="submit">Подать заявку</button>
         </div>
         <div class="acc-head">
@@ -50,7 +50,7 @@
                 <h2>Автодоставка</h2>
                 <p>Услуга «сборные грузы из Китая» подходит для участников малого и среднего бизнеса — одним словом, для тех, кто не готов ждать, пока соберется целый контейнер. В таких случаях, используя автотранспорт, можно добиться минимизации сроков и стоимости доставки, так как несколько клиентов берут на себя аренду контейнера или фуры в складчину.</p>
             </div>
-            <img src="http://www.transitplus.ru/img/service/head/sbornie.png" alt="">
+            <img src="~/images/sbornie.png" alt="">
         </div>
         <form class="form">
             <input type="text" placeholder="Имя" required>
