--- a/SqApp/Views/Shared/_Layout.cshtml
+++ b/SqApp/Views/Shared/_Layout.cshtml
@@ -105,17 +105,18 @@
                                     <li><a href="~/Home/Logistika">Логистика</a></li>
                                 </ul>
                             </li>
+                            <li><a href="#!">Переводы</a></li>
                             <li>
                                 <a href="#!" class="down usl">Услуги</a>
                                 <ul class="down-menu usl-menu">
                                     <i class="fa fa-caret-up"></i>
                                     <li><a href="#!">Пакеты с логотипом</a></li>
-                                    <li><a href="#!">Переводы</a></li>
+                                    @*<li><a href="#!">Переводы</a></li>*@
                                 </ul>
                             </li>
+                            <li><a href="#!">Отель</a></li>
                             <li><a href="#!">SQ Taxi</a></li>
                             <li><a href="#!">Гид</a></li>
-                            <li><a href="#!">Сообщения</a></li>
                             <li><a href="#!">Контакты</a></li>
                         </ul>
                     </div>
@@ -163,7 +164,7 @@
                         <i class="fab fa-telegram"></i>
                         <i class="fab fa-instagram"></i>
                     </div>
-                    <p>2017-2019 гг <br />ТОО «SQ Express»</p>
+                    <p>2019 гг <br />ТОО «SQ Express»</p>
                     <p>Корпоративный сайт</p>
                     <p>Пользовательское соглашение</p>
                 </div>
@@ -172,7 +173,7 @@
                         <a href="#!"><img src="~/images/PlayMarket.png" alt=""></a>
                         <a href="#!"><img src="~/images/AppStore.png" alt=""></a>
                     </div>
-                    <p>+7(777)333 44 55</p>
+                    <p>+7(778) 780 70 70</p>
                 </div>
             </footer>
         </div>
